graphql user_type

--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -16,6 +16,7 @@ gem "pg", "~> 1.1"
 gem "puma", "~> 5.0"
 
 gem 'bcrypt', '~> 3.1.7'
+gem 'graphql'
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem "tzinfo-data", platforms: %i[ mingw mswin x64_mingw jruby ]
@@ -34,3 +35,4 @@ group :development do
   gem 'binding_of_caller'
   gem "sassc"
 end
+gem "graphiql-rails", group: :development
